Setting up for filtering

--- a/app/src/main/res/menu/main_activity_menu_actions.xml
+++ b/app/src/main/res/menu/main_activity_menu_actions.xml
@@ -6,4 +6,9 @@
         android:icon="@drawable/randomize"
         android:title=""
         app:showAsAction="always" />
+    <item
+        android:id="@+id/menuActionFilter"
+        android:icon="@drawable/filter"
+        android:title=""
+        app:showAsAction="ifRoom" />
 </menu>
