--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -268,7 +268,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/labelHeroes">
+                android:layout_marginBottom="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/labelHeroes"
+                app:layout_constraintBottom_toBottomOf="parent">
 
                 <com.thequietcroc.legendary.custom.views.CardControl
                     android:id="@+id/cardControlHeroes1"
