--- a/app/src/main/res/layout/card_control.xml
+++ b/app/src/main/res/layout/card_control.xml
@@ -21,5 +21,6 @@
         android:background="@drawable/lock"
         android:textOff=""
         android:textOn=""
+        android:enabled="false"
         />
 </merge>
