--- a/app/src/main/res/menu/info_activity_menu_actions.xml
+++ b/app/src/main/res/menu/info_activity_menu_actions.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-            android:id="@+id/menuActionAddNew"
-            android:icon="@drawable/add_new"
-            android:title="@string/add_new"
+            android:id="@+id/menuActionDelete"
+            android:icon="@drawable/delete"
+            android:title="@string/delete"
             app:showAsAction="always" />
 </menu>
