FILTER-13 created basic info UI for base components and cards

--- a/app/src/main/res/layout/card_control.xml
+++ b/app/src/main/res/layout/card_control.xml
@@ -15,7 +15,7 @@
             android:id="@+id/cardControlLock"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:background="@drawable/lock"
+            android:background="@drawable/toggle_lock"
             android:textOff=""
             android:textOn=""
             android:enabled="false" />
