--- a/app/src/main/res/layout/activity_component_info.xml
+++ b/app/src/main/res/layout/activity_component_info.xml
@@ -20,5 +20,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:inputType="text"
             android:autofillHints="Name"
-            tools:ignore="LabelFor" />
+            tools:ignore="LabelFor"
+            android:hint="@string/name" />
+
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/componentControlsLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/infoName"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"></LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
