FILTER-13 showing always leads mastermind for henchmen and villains

--- a/app/src/main/res/layout/card_info_villain_henchmen_controls.xml
+++ b/app/src/main/res/layout/card_info_villain_henchmen_controls.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -8,16 +9,16 @@
         android:layout_marginTop="16dp">
 
     <TextView
-            android:text="@string/gameSetLabel"
+            android:text="@string/mastermindLeaderLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/cardInfoGameSetLabel"
+            android:id="@+id/cardInfoVHMastermindLeaderLabel"
             android:textSize="16sp" />
 
     <Spinner
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/cardInfoGameSetSpinner"
+            android:id="@+id/cardInfoVHMastermindLeaderSpinner"
             android:layout_weight="1"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" />
