--- a/app/src/main/res/layout/spinner_layout.xml
+++ b/app/src/main/res/layout/spinner_layout.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="4dp"
+        android:layout_marginLeft="2dip"
+        android:layout_marginRight="5dip"
+        android:ellipsize="marquee"
+        android:textColor="@color/white"
+        android:layout_marginStart="2dip"
+        android:layout_marginEnd="5dip" />
